; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_DHT.c_z_state_save_subheader.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_DHT.c_z_state_save_subheader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DHT_STATE_COOKIE_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32)* @z_state_save_subheader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @z_state_save_subheader(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @host_to_lendian32(i32* %7, i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 4
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @DHT_STATE_COOKIE_TYPE, align 4
  %14 = call i32 @host_tolendian16(i32 %13)
  %15 = shl i32 %14, 16
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @host_tolendian16(i32 %16)
  %18 = or i32 %15, %17
  %19 = call i32 @host_to_lendian32(i32* %12, i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 4
  store i32* %21, i32** %4, align 8
  %22 = load i32*, i32** %4, align 8
  ret i32* %22
}

declare dso_local i32 @host_to_lendian32(i32*, i32) #1

declare dso_local i32 @host_tolendian16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
